@startuml

title __CONTROLLER's Class Diagram__\n

  namespace controller {
    class controller.Controller {
        ~ insertPosterField : TextField
        ~ insertTitleField : TextField
        ~ insertYearField : TextField
        ~ listMovie : ObservableList<Movie>
        ~ listViewImages : ListView<Movie>
        ~ resultsLabel : Label
        ~ tabPane : TabPane
        ~ titleField : TextField
        + insertTitle()
        + searchMovies()
        - makeCells()
    }
  }
  

  namespace controller {
    class controller.EditMovieController {
        ~ castView : TableView<Person>
        ~ directorListView : ListView<Person>
        ~ insertPosterField : TextField
        ~ insertTitleField : TextField
        ~ insertYearField : TextField
        ~ poster : ImageView
        ~ tabPane : TabPane
        ~ writerListView : ListView<Person>
        + deleteMovie()
        + saveMovieChanges()
        + setDAO()
        + setMovie()
        + setProductionPeople()
        - makeCells()
    }
  }
  

  controller.Controller o-- data.MovieAccessInterface : daoMovie
  controller.Controller o-- data.PersonAccessInterface : daoPerson
  controller.Controller o-- model.Movie : movie
  controller.EditMovieController o-- data.MovieAccessInterface : daoMovie
  controller.EditMovieController o-- model.Movie : movie


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
